Set codemirror to fixed font size to avoid word wrap issues
Word wrap indentation code requires a fixed width, or else
codemirror would need to be refreshed on each window resize

--- a/frontend/public/codemirror.css
+++ b/frontend/public/codemirror.css
@@ -3,6 +3,7 @@
 .CodeMirror {
   /* Set height, width, borders, and global font properties here */
   font-family: monospace;
+  font-size: 14px;
   height: 100%;
   width: 100%;
   color: #999;
